<resources>
    <string name="app_name" translatable="false">ProjetIhm</string>
    <string name="NameEntreeTitle">Name</string>
    <string name="charismaLevelTitle">charisma level</string>
    <string name="FirstNameEntree" translatable="false">Gordon</string>
    <string name="NameEntree" translatable="false">Freeman</string>
    <string name="numPageQuestion1" translatable="false">1/6</string>
    <string name="genreTitle">Genre</string>
    <string name="nonBinaryGenreButton">Non biinary</string>
    <string name="otherGenre">xenogeneic</string>
    <string name="numPageQuestion2" translatable="false">2/6</string>
    <string name="numPageQuestion3" translatable="false">3/6</string>
    <string name="luckScrollBarTitle">Luck level</string>
    <string name="rollDiceButton">Roll a dice</string>
    <string name="diceDescription">diceValue</string>
    <string name="numPageQuestion4" translatable="false">4/6</string>
    <string name="paladinTitle">Paladin</string>
    <string name="babarianDescription">Image barbarian</string>
    <string name="paladinDescription">image paladin</string>
    <string name="bardTitle">Bard</string>
    <string name="wizardTitle">Wizard</string>
    <string name="wizardImage">wizard image</string>
    <string name="bardImage">bardImage</string>
    <string name="numPageQuestion5" translatable="false">5/6</string>
    <string name="buknerButton">I\'m going in a bunker</string>
    <string name="buttonNextQuestion">Confirm</string>
    <string name="numPageQuestion6" translatable="false">6/6</string>
    <string name="ImageResultDescription">Image result</string>
    <string name="otherGenreTitle">Precision :</string>
    <string name="switchRestorant">A restaurant</string>
    <string name="switchCinema">A theater night</string>
    <string name="meteoriteTitle">A meteorite is gonna crash in 24. What do you do ?</string>
    <string name="switchConference">A nuclear conference with no appetizer</string>
    <string name="ArchievmentButton">Archievement</string>
    <string name="backButton">Back</string>
    <string name="resultDiceTitle">dice result</string>
    <string name="Title">Who am I</string>
    <string name="romanticTitle">How do you see a romantic date ?</string>
    <string name="FirstNameEntreeTitle">First name</string>
    <string name="famillyButton">I\'m spending my last moments with my family</string>
    <string name="destroyMeteoriteButton">I\'m rushing to destroy the meteorite</string>
    <string name="cthuhlluButton">I invoke cthullu and hope for the best</string>
    <string name="fidelityScrollBarTitle">Indicate your fidelity level</string>
    <string name="maleGenreButton">Man</string>
    <string name="closeApp">Close the application</string>
    <string name="femaleGenreButton">Woman</string>
    <string name="switchUrbex">Urbex exploration</string>
    <string name="StartButton">Start</string>
    <string name="barbarianTitle">Barbarian</string>
    <string name="OtherGenreButton">other</string>
    <string name="moneyBankTitle">Money in the bank</string>
    <string name="romanceLover">We get it, you\'re in love. Please move on. It isn\'t cute, it\'s creepy. Everyone wonder if you\'ll do a redo of You or of American Psycho</string>
    <string name="temerityLover">You\'re a hot head, a crazy *censored* . What\'s the point of life if you can live past 30 ? None you\'re right.  Will you have a loving family ? Probably not, but hey that\'s some basic *censored* *censored*. So enjoy a *censored* *censored* at *censored* so you can *censored* *censored* *censored* and if your crazy enough might as well *censored* *censored* with a *censored* *censored* banana *censored* *censored*</string>
    <string name="perfectLover">You\'re the basic result of the developper, so you\'re simply perfect, can\'t do anything wrong and are basically the second coming of Crhist. So you\'re just the perfect love, and if you\'re partner can\'t see it it\'s her fault. Eating pinaple isn\'t a reason to breakup Linda. I\'m not crying, you\'re crying</string>
    <string name="richLover">You\'re rich, probably in a capitalist country. You can buy whatever you want, but love is priceless</string>
    <string name="balancedLover">"You're a basic *censored* "</string>
    <string name="loadButton">Load previous acitivities</string>
    <string name="toastBadNameUserInput">Enter an appropriate name and last name</string>
    <string name="toastGenre">Please choose a genre</string>
    <string name="toastChooseAnswer">Please choose an answer</string>
    <string name="noFile">No file to load</string>
    <string name="choose_one_class">Choose one class</string>

</resources>