<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question5">

    <TextView
        android:id="@+id/PageNumberQuestion5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/numPageQuestion5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PageNumberQuestion5">

        <TextView
            android:id="@+id/MeteoriteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meteoriteTitle" />

        <RadioGroup
            android:id="@+id/MeteoriteButtonGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/DestroyMeteoriteButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/destroyMeteoriteButton" />

            <RadioButton
                android:id="@+id/FamillyButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/famillyButton" />

            <RadioButton
                android:id="@+id/CthuhlluButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cthuhlluButton" />

            <RadioButton
                android:id="@+id/BunkerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/buknerButton" />
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout8">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/backButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="back"
            android:text="@string/backButton" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/ButtonNextQuestion5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="callNextQuestion"
            android:text="@string/buttonNextQuestion" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>