<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInput">

    <TextView
        android:id="@+id/FirstNameEntreeAreaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/FirstNameEntreeTitle"
        app:layout_constraintStart_toStartOf="@+id/FirstNameEntreeArea"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/FirstNameEntreeArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/FirstNameEntree"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameEntreeAreaTitle"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <TextView
        android:id="@+id/NameEntreeAreaTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/NameEntreeTitle"
        app:layout_constraintStart_toStartOf="@+id/FirstNameEntreeArea"
        app:layout_constraintTop_toBottomOf="@+id/FirstNameEntreeArea" />

    <EditText
        android:id="@+id/NameEntreeArea"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/NameEntree"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/NameEntreeAreaTitle"
        app:layout_constraintTop_toBottomOf="@+id/NameEntreeAreaTitle"
        tools:ignore="DuplicateSpeakableTextCheck,SpeakableTextPresentCheck,TextContrastCheck" />

    <SeekBar
        android:id="@+id/seekBarCharisma"
        android:layout_width="0dp"
        android:layout_height="46dp"
        app:layout_constraintEnd_toEndOf="@+id/NameEntreeArea"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/charismaLevelTitle"
        app:layout_constraintTop_toBottomOf="@+id/charismaLevelTitle" />

    <TextView
        android:id="@+id/charismaLevelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/charismaLevelTitle"
        app:layout_constraintStart_toStartOf="@+id/NameEntreeArea"
        app:layout_constraintTop_toBottomOf="@+id/NameEntreeArea" />

    <Spinner
        android:id="@+id/spinnerBankMoney"
        android:layout_width="255dp"
        android:layout_height="48dp"
        android:entries="@array/array_money_bank"
        android:minHeight="48dp"
        app:layout_constraintStart_toStartOf="@+id/bankMoneyTitle"
        app:layout_constraintTop_toBottomOf="@+id/bankMoneyTitle"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/bankMoneyTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/moneyBankTitle"
        app:layout_constraintStart_toStartOf="@+id/seekBarCharisma"
        app:layout_constraintTop_toBottomOf="@+id/seekBarCharisma" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/spinnerBankMoney"
        tools:layout_editor_absoluteX="1dp">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="back"
            android:text="@string/backButton" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/startQuestionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="callQuestion1"
            android:text="@string/buttonNextQuestion" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>